--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+        </dependency>
+
+
         <!-- JPA, MySQL e H2 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
