--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
   profiles:
     active: dev
 ---
+
 spring:
   profiles: dev
   datasource:
@@ -24,3 +25,26 @@ spring:
         type: trace
         id:
           new_generator_mappings: false
+
+---
+
+spring:
+  profiles: test
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    username: sa
+    password: sa
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        use_sql_comments: true
+        format_sql: true
+        type: trace
+        id:
+          new_generator_mappings: false
+  flyway:
+    enabled: false
